<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_crypt_algoritm"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_body_2_material" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_of_work"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ECB"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CBC"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FBC"
                    android:checked="false" />

            </RadioGroup>

            <RadioGroup android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:clickable="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_mac"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Вкл"
                    android:layout_weight="1"
                    android:checked="false" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Выкл"
                    android:layout_weight="1" />

            </RadioGroup>

            <RadioGroup android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_length"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="256 бит"
                    android:checked="false" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="512 бит"
                    android:checked="false" />

            </RadioGroup>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synch"
                />

            <EditText
                android:layout_weight="1"
                android:id="@+id/ed_text_synch"
                />

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settigns"
        android:id="@+id/save_settings_btn"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/settings_interface"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:layout_marginTop="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/change_password_btn"
                android:text="@string/change_password"
                android:layout_weight="1"
                android:layout_margin="3dp" />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/delete_all_data_btn"
                android:text="@string/delete_all_data"
                android:layout_weight="1"
                android:layout_margin="3dp" />

            </TableRow>
    </TableLayout>


</LinearLayout>